# Biblioteca

./: .eslintignore  .gitignore  Biblioteca.doap  CONTRIBUTING.md  Makefile  README.md  Workbench.doap  meson.build  package-lock.json  package.json
build-aux/: app.drey.Biblioteca.Devel.json  app.drey.Biblioteca.json  build-index.js  re.sonny.Workbench.Devel.json  re.sonny.Workbench.json
build-aux/modules/: blueprint-compiler.json  gi-docgen.json  gom.json  libportal.json  libshumate.json  libspelling.json  sdk-docs.json  vte.json
data/: app.desktop  app.gschema.xml  app.metainfo.xml  app.metainfo.xml.in  app.service  meson.build
po/: Biblioteca.pot  LINGUAS  POTFILES  app.drey.Biblioteca.pot  meson.build  sv.po  tr.po
src/: BrowseView.js  DocumentationPage.js  FindOverlay.blp  FindOverlay.js  FindToolbar.blp  FindToolbar.js  SearchView.blp  SearchView.js  Shortcuts.blp  Shortcuts.js  Sidebar.blp  Sidebar.js  URLBar.blp  URLBar.js  WebView.blp  WebView.js  about.js  actions.js  application.js  biblioteca  bin.js  devdoc_styles.css  init.js  main.js  meson.build  search.js  style-dark.css  style.css  util.js  window.blp  window.js
src/Manuals/: DocumentationViewer.blp  DocumentationViewer.js  Shortcuts.js
src/sidebar/: BrowseView.blp  BrowseView.js  DevdocBrowseView.js  DocumentationPage.js  SearchView.blp  SearchView.js  Sidebar.blp  Sidebar.js  ZoomButtons.blp  ZoomButtons.js  index.json
